# bilanciato

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
forms/: fct_holding_form.yaml
src/dashboard/: app.py  glossary.py
src/database/: load.py  queries.py  schema.py
src/etl/: curated_amiat.py  curated_cit.py  curated_iren.py  curated_smat.py  curated_tne.py  ingest.py  load_bdap_comuni.py  load_bdap_rendiconto.py  load_contratti.py  load_debito.py  load_entity_statements.py  load_form.py  load_popolazione.py  load_rendiconto_csv.py  parse_dd.py  validate.py
src/extraction/: pdf_tables.py
src/normalization/: bdap_rendiconto.py  debito.py  entities.py  entity_financials.py  entity_names.py  entity_statements.py  note_tables.py  rendiconto.py  rendiconto_capitoli.py  rendiconto_csv.py  statements.py
src/publish/: build.py
src/utils/: config.py  numbers.py
tests/: test_bdap_rendiconto.py  test_capitoli.py  test_debito.py  test_entity_statements.py  test_publish.py  test_queries.py  test_rendiconto.py  test_rendiconto_csv.py  test_validate.py
uploads/: rendiconto_entrate_2019.csv  rendiconto_spese_2019.csv
